--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
 <body>
     <header>
         <!-- Floating Duckling Images -->
-        <img src="C:\Users\iHC\Downloads\S__69517479-removebg.png" alt="Duckling 1" class="duckling-image left">
-        <img src="C:\Users\iHC\Downloads\S__69517479-removebg.png" alt="Duckling 2" class="duckling-image right">
+        <img src="pictures/S__69517479-removebg.png" alt="Duckling 1" class="duckling-image left">
+        <img src="pictures/S__69517479-removebg.png" alt="Duckling 2" class="duckling-image right">
         <h1>Welcome to DucklingMoon ($DKLM)</h1>
         <p>The cutest crypto meme coin on Solana! Quack your way to the moon!</p>
         <div class="cta">
@@ -134,7 +134,7 @@
     <section id="about">
         <h2>What is DucklingMoon?</h2>
         <p>DucklingMoon is a Solana-based meme coin with moonshot potential. Built for speed, scalability, and fun, we’re here to quack our way to the top! Join our community and be part of the journey!</p>
-        <img src="C:\Users\iHC\Downloads\S__69517479-removebg.png" alt="Duckling Meme" style="width: 600px; margin-top: 2px;">
+        <img src="pictures/S__69517479-removebg.png" alt="Duckling Meme" style="width: 600px; margin-top: 2px;">
     </section>
 
     <section id="tokenomics" class="tokenomics">
