--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         <a href="https://twitter.com/DucklingMoon" target="_blank">Twitter</a>
         <a href="https://t.me/DucklingMoon" target="_blank">Telegram</a>
         <a href="https://discord.gg/DucklingMoon" target="_blank">Discord</a>
-        <img src="pictures/S__69517479-removebg.png" alt="Duckling Community" style="width: 200px; margin-top: 20px;">
+        <img src="pictures/S__69517479-removebg.png" alt="Duckling Community" style="width: 200px; margin: 20px auto; display: block;">
     </section>
 
     <footer>
